# axiom-evi-gasnet

./: .gitignore  Bootstrap  CVS-PRACTICES  ChangeLog  GASNet.dsp  Makefile.am  README  README-devel  README-git  README-release  README-tools  README.git  README.md  acconfig.h  acinclude.m4  configure-axiom  configure.in  cross-configure-aarch64-axiom  cross-configure-axiom  cross-configure-x86-axiom  gasnet-debug.pc.in  gasnet-performance.pc.in  gasnet.h  gasnet_ammacros.h  gasnet_asm.h  gasnet_atomic_bits.h  gasnet_atomicops.h  gasnet_atomicops_internal.h  gasnet_basic.h  gasnet_coll.h  gasnet_diagnostic.c  gasnet_handler.h  gasnet_help.h  gasnet_internal.c  gasnet_internal.h  gasnet_membar.h  gasnet_mmap.c  gasnet_pshm.c  gasnet_pshm.h  gasnet_syncops.h  (+10 more)
elan-conduit/: Makefile.am  README  elan-par.mak.in  elan-parsync.mak.in  elan-seq.mak.in  gasnet_core.c  gasnet_core.h  gasnet_core_dump.c  gasnet_core_fwd.h  gasnet_core_help.h  gasnet_core_internal.h  gasnet_core_reqrep.c  gasnet_core_toolhelp.h  gasnet_extended.c  gasnet_extended_fwd.h  gasnet_extended_internal.h
gm-conduit/: Makefile.am  README  conduit.mak.in  firehose_fwd.h  gasnet_core.c  gasnet_core.h  gasnet_core_conf.c  gasnet_core_firehose.c  gasnet_core_fwd.h  gasnet_core_help.h  gasnet_core_internal.h  gasnet_core_misc.c  gasnet_core_receive.c  gasnet_extended.c  gasnet_extended.h  gasnet_extended_firehose.c  gasnet_extended_fwd.h  gasnet_extended_help.h  gasnet_extended_internal.h  gasnet_extended_op.c  gasnet_extended_ref.c  gm-par.mak.in  gm-parsync.mak.in  gm-seq.mak.in  license.txt
gm-conduit/contrib/: Makefile.am  gasnetrun.gexec.pl  gasnetrun.lamexec.pl  gasnetrun.pbs-rsh.pl  gasnetrun_gm  gasnetrun_gm.in  gasnetrun_gm.pl
lapi-conduit/: Makefile.am  README  README-RDMA  STATUS  firehose_fwd.h  gasnet_core.c  gasnet_core.h  gasnet_core_fwd.h  gasnet_core_help.h  gasnet_core_internal.c  gasnet_core_internal.h  gasnet_extended.c  gasnet_extended.h  gasnet_extended_fwd.h  gasnet_extended_internal.h  gasnet_firehose.c  lapi-par.mak.in  lapi-parsync.mak.in  lapi-seq.mak.in  license.txt
mpi-conduit/: Makefile.am  README  gasnet_core.c  gasnet_core.h  gasnet_core_fwd.h  gasnet_core_help.h  gasnet_core_internal.h  mpi-par.mak.in  mpi-parsync.mak.in  mpi-seq.mak.in
mpi-conduit/contrib/: Makefile.am  gasnetrun_mpi.in  gasnetrun_mpi.pl
other/: Makefile-conduit.mak.in  Makefile-echovar.mak  Makefile-libgasnet.mak.in  Makefile.am  README  cross-configure-help.c  detect-cachesz.c  detect-sysv.c  fragment-body.mak.in  fragment-head.mak.in  gasnet_portable_platform.h  gasnet_tools-fragment.mak.in  perlstart  perlstart.in  portable_inttypes.h  portable_platform.h
other/ammpi/: AMMPI.dsp  Makefile  Makefile.aix  Makefile.aix.rs6000  Makefile.am  Makefile.common  Makefile.darwin  Makefile.generic  Makefile.in  Makefile.irix  Makefile.irix.origin  Makefile.linux.i386  Makefile.linux.i486  Makefile.linux.ia64  Makefile.osf1.alpha  Makefile.solaris.i386  Makefile.solaris.sparc  Makefile.standalone  Makefile.tests  Makefile.titanium.in  Makefile.unicosmk.cray_t3e  README  ammpi.h  ammpi_ep.c  ammpi_internal.h  ammpi_reqrep.c  ammpi_spmd.c  ammpi_spmd.h  license.txt
other/amudp/: AMUDP.dsp  Makefile  Makefile.aix.rs6000  Makefile.am  Makefile.common  Makefile.darwin  Makefile.generic  Makefile.linux.i386  Makefile.linux.i486  Makefile.linux.ia64  Makefile.mtx.mta  Makefile.osf1.alpha  Makefile.posix.i386  Makefile.solaris  Makefile.solaris.i386  Makefile.solaris.sparc  Makefile.standalone  Makefile.tests  Makefile.titanium.in  Makefile.unicosmk.cray_t3e  README  amudp.h  amudp_cdefs.c  amudp_const.h  amudp_ep.cpp  amudp_internal.h  amudp_reqrep.cpp  amudp_spawn.cpp  amudp_spmd.cpp  amudp_spmd.h  amudprun.c  apputils.c  apputils.h  exc.cpp  exc.h  license.txt  sig.cpp  sig.h  sockaddr.h  socket.h  (+14 more)
other/amxtests/: apputils.c  apputils.h  testam.c  testam.h  testbounce.c  testbulk.c  testgetput.c  testlatency.c  testlatencyM.c  testoutput.c  testping.c  testreadwrite.c  testreduce.c
other/blcr/: README-blcr
other/contrib/: Makefile.am  crayxt-nptl-pthread-patch  cross-configure-aarch64-axiom  cross-configure-axiom  cross-configure-bgl  cross-configure-bgp  cross-configure-bgq  cross-configure-cray-aries-alps  cross-configure-cray-aries-slurm  cross-configure-cray-gemini-alps  cross-configure-cray-gemini-slurm  cross-configure-crayxc-linux  cross-configure-crayxe-linux  cross-configure-crayxt-catamount  cross-configure-crayxt-linux  cross-configure-crayxt3  cross-configure-intel-knl  cross-configure-intel-mic  cross-configure-k42ppc64  cross-configure-linux-arm  cross-configure-osxi686  cross-configure-osxppc  cross-configure-osxppc64  cross-configure-osxx86_64  gasnet.supp  (+7 more)
shmem-conduit/: Makefile.am  README  gasnet_core.c  gasnet_core.h  gasnet_core_fwd.h  gasnet_core_help.h  gasnet_core_internal.h  gasnet_extended.c  gasnet_extended_fwd.h  gasnet_extended_help_extra.h  shmem-seq.mak.in
smp-conduit/: Makefile.am  README  gasnet_coll_fwd.h  gasnet_core.c  gasnet_core.h  gasnet_core_fwd.h  gasnet_core_help.h  gasnet_core_internal.h  gasnet_extended.c  gasnet_extended_coll.c  gasnet_extended_fwd.h  gasnet_extended_help_extra.h  smp-par.mak.in  smp-parsync.mak.in  smp-seq.mak.in
template-conduit/: Makefile.am  README  README.template  gasnet_core.c  gasnet_core.h  gasnet_core_fwd.h  gasnet_core_help.h  gasnet_core_internal.h  template-par.mak.in  template-parsync.mak.in  template-seq.mak.in
udp-conduit/: Makefile.am  README  conduit.mak.in  gasnet_core.c  gasnet_core.h  gasnet_core_fwd.h  gasnet_core_help.h  gasnet_core_internal.h  udp-par.mak.in  udp-parsync.mak.in  udp-seq.mak.in
vapi-conduit/: Makefile.am  README  conduit.mak.in  firehose_fwd.h  gasnet_bootstrap_mpi.c  gasnet_bootstrap_ssh.c  gasnet_core.c  gasnet_core.h  gasnet_core_connect.c  gasnet_core_fwd.h  gasnet_core_help.h  gasnet_core_internal.h  gasnet_core_sndrcv.c  gasnet_core_thread.c  gasnet_extended.c  gasnet_extended_fwd.h  gasnet_extended_internal.h  gasnet_firehose.c  license.txt  vapi-par.mak.in  vapi-parsync.mak.in  vapi-seq.mak.in
(+412 files in other folders)
